# llm-zoomcamp

./: .gitignore  01-15-toyAIkit-framework.ipynb  pyproject.toml
.ipynb_checkpoints/: 01-rag-agent-func-calling-checkpoint.ipynb  08-rag-helper-checkpoint.ipynb  sqlite-ingest-checkpoint.ipynb
01-agentic-rag/: 01-agentic-rag.ipynb  01-rag-agent-func-calling.ipynb  rag_helper.py  sqlite-ingest.ipynb
01-agentic-rag/.ipynb_checkpoints/: 01-08-rag-helper-checkpoint.ipynb  01-14-agentic-loop-checkpoint.ipynb  (+3 more)
02-vector-search/: 02-08-pgvector.ipynb  02-vector-search.ipynb  02-vector-search_07-sqlsearch-vector.ipynb  pyproject.toml
03-orchestration/: homework.md
04-evaluation/: 04-12-rag-answers.ipynb  04-13-llm-as-judge.ipynb  04-14-Agent Evaluation.ipynb  04-evaluation-04-search-evaluation.ipynb  04-evaluation.ipynb  04-homework.ipynb  agent-answers.csv  agent-evaluations.csv  ground_truth-new.csv  ingest.py  pyproject.toml  rag-answers-new.csv  rag-evaluations-new.csv
05-monitoring/: 05-monitoring-1.ipynb  Makefile  app.py  assistant.py  dashboard.py  db_init.py  db_query.py  docker-compose.yml  generate_data.py  metrics.py  pyproject.toml
Project-1/: Generating ground truth.ipynb  Search evaluation.ipynb  app.py  assistant.py  evaluation_utils.py  ground_truth-mal.csv  ingest.py  pyproject.toml  rag_helper.py
workshops/: 2026-07-20_agent_traces_analysis_plan.md  2026-07-20_claude_logs_analysis_plan.md  README.md  __deployment__.py  agent_traces_dashboard.py  claude_logs_dashboard.py  claude_logs_pipeline.py  pyproject.toml  rest_api_pipeline.py
(+16 files in other folders)
